<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_toolbar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtapkname"
                android:layout_marginTop="@dimen/separacion"
                android:hint="@string/hintApkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtDesarrollador"
                android:layout_marginTop="@dimen/separacion"
                android:hint="@string/hintDesarrollador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_marginTop="@dimen/separacion"
                android:hint="@string/hintDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/checkInstalada"
                android:text="@string/checktext"
                android:layout_marginTop="@dimen/separacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnSave"
                android:text="@string/btnSave"
                android:layout_marginTop="@dimen/separacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
</LinearLayout>